fix(layouts): adjust sidebar margins to avoid vertical scrollbar

--- a/src/layouts/section/styles.module.scss
+++ b/src/layouts/section/styles.module.scss
@@ -20,7 +20,7 @@
 
   @media (min-width: $theme-breakpoints-mobile) {
     display: block;
-    margin-bottom: 3.25rem;
+    margin-bottom: 3rem;
   }
 }
 
@@ -81,7 +81,7 @@
   }
 
   @media (min-width: $theme-breakpoints-mobile) {
-    margin: 3.125rem 0 2rem;
+    margin: 3rem 0 2rem;
     padding-left: 3.125rem;
     flex-direction: column;
     justify-content: flex-end;
